--- a/WorkFlow/Views/Account/Register.cshtml
+++ b/WorkFlow/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model WorkFlow.Models.RegisterCompanyModel
 @{
-    ViewBag.Title = "Регистрация";
+    ViewBag.Title = "Registration";
 }
 <h2>@ViewBag.Title.</h2>
 @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -8,7 +8,7 @@
     @Html.AntiForgeryToken()
     @Html.ValidationSummary("", new { @class = "text-danger" })
 
-    <h4>Заполните форму. Поля обозначенные звездочкой обезательные для заполнения.</h4>
+    <h4>Fill out the form. Fields marked with a star are required.</h4>
     <hr />
     <div class="form-group">
         @Html.LabelFor(m => m.Company.Name, new { @class = "col-md-2 control-label" })
