--- a/WorkFlow/Views/Vacancies/Index.cshtml
+++ b/WorkFlow/Views/Vacancies/Index.cshtml
@@ -8,7 +8,8 @@
 @section scripts{
     @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")
 }
-<h2>Index</h2>
+<script src="~/Scripts/MicrosoftMvcAjax.js" type="text/javascript"></script>
+
 
 <div style="background-color:#5C8D94" class="navbar-collapse collapse navbar-responsive-collapse">
 
@@ -54,6 +55,12 @@
         </div>
     </div>
 </nav>
+
+<div id="toCollapse" class="collapse col-md-12">
+
+    @Html.Partial("~/Views/Search/_SearchVacancyPartial.cshtml", new WorkFlow.Models.SearchVacancyCriteria())
+
+</div>
 
 <div id="divResponse">
     @Html.Partial("_VacanciesListPartial", Model)
