--- a/WorkFlow/Views/Vacancies/_VacanciesListPartial.cshtml
+++ b/WorkFlow/Views/Vacancies/_VacanciesListPartial.cshtml
@@ -4,7 +4,11 @@
 @{
     ViewBag.Title = "_VacanciesListPartial";
 
-    int id = WorkFlow.Controllers.DatabaseController.DoSQL<WorkFlow.Models.DataBaseModels.Companies>(String.Format("Select * From Companies Where Email = '{0}'", User.Identity.GetUserName())).LastOrDefault().Id;
+    int id = 0;
+    if (User.Identity.IsAuthenticated)
+    {
+        id = WorkFlow.Controllers.DatabaseController.DoSQL<WorkFlow.Models.DataBaseModels.Companies>(String.Format("Select * From Companies Where Email = '{0}'", User.Identity.GetUserName())).LastOrDefault().Id;
+    }
 
 }
 
@@ -13,45 +17,54 @@
         cursor: pointer;
     }
 </style>
-
-<table class="table table-hover">
-    <thead>
-        <tr>
-            @{
-                for (int i = 2; i < Model.DBDataTable.Columns.Count; i++)
-                {
-                    <th>@Model.DBDataTable.Columns[i].Caption </th>
+@if (Model.DBDataTable.Rows.Count == 0)
+{
+    <h5 class="col-md-offset-1">No vacancies.</h5>
+}
+else
+{
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                @{
+    for (int i = 2; i < Model.DBDataTable.Columns.Count; i++)
+    {
+        <th>@Model.DBDataTable.Columns[i].Caption </th>
+    }
                 }
+            </tr>
+        </thead>
+        <tbody>
+            @{
+
+    foreach (System.Data.DataRow row in Model.DBDataTable.Rows)
+    {
+        <tr onclick="location.href = '@(Url.Action("VacancyInfo", "CompanyInfo", new { id = Convert.ToInt32(row.ItemArray[0]) }))'" style="cursor: pointer">
+            @{
+        for (int i = 2; i < row.ItemArray.Count(); i++)
+        {
+            <td>
+
+                @{if (row.ItemArray[i].ToString() != "0")
+                { @row.ItemArray[i].ToString()}
+                }
+            </td>
+        }
+        if (@id == Convert.ToInt32(@row.ItemArray[1]))
+        {
+            <td>
+                @Ajax.ActionLink("Edit", "EditVacancyInfo", "Vacancies", new { id = Convert.ToInt32(row.ItemArray[0]) }, new AjaxOptions { HttpMethod = "POST" })
+            </td>
+                <td>
+                    @Ajax.ActionLink("Delete", "DeleteVacancy", "Vacancies", new { id = Convert.ToInt32(row.ItemArray[0]) }, new AjaxOptions { HttpMethod = "POST" })
+                </td>
+        }
             }
         </tr>
-    </thead>
-    <tbody>
-        @{
-            foreach (System.Data.DataRow row in Model.DBDataTable.Rows)
-            {
-                <tr onclick="location.href = '@(Url.Action("VacancyInfo", "CompanyInfo", new { id = Convert.ToInt32(row.ItemArray[0]) }))'" style="cursor: pointer">
-                    @{
-                for (int i = 2; i < row.ItemArray.Count(); i++)
-                {
-                    <td>
+    }
 
-                        @{if (row.ItemArray[i].ToString() != "0")
-                        { @row.ItemArray[i].ToString()}
-                        }
-                    </td>
-                }
-                if (@id == Convert.ToInt32(@row.ItemArray[1]))
-                {
-                    <td>
-                        @Ajax.ActionLink("Edit", "EditVacancyInfo", "Vacancies", new { id = Convert.ToInt32(row.ItemArray[0]) }, new AjaxOptions { HttpMethod = "POST" })
-                    </td>
-                    <td>
-                        @Ajax.ActionLink("Delete", "DeleteVacancy", "Vacancies", new { id = Convert.ToInt32(row.ItemArray[0]) }, new AjaxOptions { HttpMethod = "POST" })
-                    </td>
-                }
-                    }
-                </tr>
+
             }
-        }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+}
