--- a/WorkFlow/Content/bootstrap.css
+++ b/WorkFlow/Content/bootstrap.css
@@ -7,6 +7,12 @@
  * Based on Bootstrap
 */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
+div.div-hover:hover {
+    background-color:#f5f5f5;
+}
+
+
+
 html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
