--- a/WorkFlow/Views/CompanyInfo/VacancyInfo.cshtml
+++ b/WorkFlow/Views/CompanyInfo/VacancyInfo.cshtml
@@ -2,7 +2,7 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = Model.Name + " WorkFlow";
+    ViewBag.Title = " WorkFlow";
     List<WorkFlow.Models.DataBaseModels.Requirements> list = WorkFlow.Controllers.DatabaseController.DoSQL<WorkFlow.Models.DataBaseModels.Requirements>("Select * From Requirements Where VacancyId = " + Model.Id);
 
 }
